Add alternating row colours in tables

--- a/Persona4GoldenHelper/Client/Pages/Accessories.razor
+++ b/Persona4GoldenHelper/Client/Pages/Accessories.razor
@@ -15,7 +15,7 @@
         @if (AllAccessories != null)
             foreach (var accessory in AllAccessories)
             {
-                <tbody>
+                <tbody class="alternate-colour">
                     @for (int i = 0; i < accessory.Obtained.Count; i++)
                     {
                         var obtain = accessory.Obtained[i];
