--- a/Persona4GoldenHelper/Client/Pages/Index.razor
+++ b/Persona4GoldenHelper/Client/Pages/Index.razor
@@ -20,7 +20,7 @@
         <tbody>
         @foreach (var source in Sources)
         {
-            <tr>
+            <tr class="alternate-colour">
                 <td>@source.Key</td>
                 <td>
                     @foreach (var link in source.Value)
