--- a/Persona4GoldenHelper/Client/Pages/Lunches.razor
+++ b/Persona4GoldenHelper/Client/Pages/Lunches.razor
@@ -14,7 +14,7 @@
             @if (AllLunches != null)
                 foreach (var lunch in AllLunches)
                 {
-                    <tr>
+                    <tr class="alternate-colour">
                         <td class="text-align-centre">@lunch.Name</td>
                         <td class="text-align-centre">@lunch.Method</td>
                     </tr>
