--- a/Persona4GoldenHelper/Client/Pages/Quests.razor
+++ b/Persona4GoldenHelper/Client/Pages/Quests.razor
@@ -20,7 +20,7 @@
             @if (AllQuests != null)
                 foreach (var quest in AllQuests)
                 {
-                    <tr>
+                    <tr class="alternate-colour">
                         <td class="text-secondary text-align-centre">@quest.Number</td>
                         <td>@quest.Title</td>
                         <td class="text-align-centre">@quest.QuestGiver</td>
