--- a/Persona4GoldenHelper/Client/Pages/Armour.razor
+++ b/Persona4GoldenHelper/Client/Pages/Armour.razor
@@ -22,7 +22,7 @@
                     </thead>
                     @foreach (var armour in GetArmourByGender(gender))
                     {
-                        <tbody>
+                        <tbody class="alternate-colour">
                             @for (int i = 0; i < armour.Obtained.Count; i++)
                             {
                                 var obtain = armour.Obtained[i];
