--- a/Persona4GoldenHelper/Client/Pages/Plants.razor
+++ b/Persona4GoldenHelper/Client/Pages/Plants.razor
@@ -19,7 +19,7 @@
         @if (AllPlants != null)
             foreach (var plant in AllPlants)
             {
-                <tbody>
+                <tbody class="alternate-colour">
                     @for (int i = 0; i < plant.Products.Count; i++)
                     {
                         <tr>
