--- a/Persona4GoldenHelper/Client/Pages/Shadows.razor
+++ b/Persona4GoldenHelper/Client/Pages/Shadows.razor
@@ -27,7 +27,7 @@
             foreach (var shadowName in GetDistrinctShadowNames())
             {
                 var shadows = GetShadowsByName(shadowName);
-                <tbody>
+                <tbody class="alternate-colour">
                     @for (int i = 0; i < shadows.Count; i++)
                     {
                         var shadow = shadows[i];
