--- a/Persona4GoldenHelper/Client/Pages/Weapons.razor
+++ b/Persona4GoldenHelper/Client/Pages/Weapons.razor
@@ -21,7 +21,7 @@
                     </thead>
                     @foreach (var weapon in GetWeaponsByUser(character))
                     {
-                        <tbody>
+                        <tbody class="alternate-colour">
                             @for (int i = 0; i < weapon.Obtained.Count; i++)
                             {
                                 var obtain = weapon.Obtained[i];
