--- a/Persona4GoldenHelper/Client/wwwroot/css/app.css
+++ b/Persona4GoldenHelper/Client/wwwroot/css/app.css
@@ -7,6 +7,7 @@
 :root {
     --background-colour-dark: #121212;
     --background-colour-medium: #202020;
+    --background-colour-medium-light: #242424;
     --background-colour-light: #282828;
     --background-colour-very-light: #303030;
     --background-colour-very-very-light: #404040;
@@ -117,13 +118,22 @@ table {
     border-radius: var(--border-radius-medium);
 }
 
-    table tr {
+    table tbody, table tr {
         background-color: var(--background-colour-medium);
         transition: background-color .25s;
     }
 
-        table tr:hover {
-            background-color: var(--background-colour-very-light);
+        table tbody.alternate-colour:nth-child(odd),
+        table tr.alternate-colour:nth-child(even) {
+            background-color: var(--background-colour-medium-light);
+        }
+
+        table tbody.alternate-colour > tr {
+            background-color: transparent;
+        }
+
+        table tbody:hover, table tr:hover {
+            background-color: var(--background-colour-very-light) !important;
         }
 
     table th {
