--- a/Persona4GoldenHelper/Client/Pages/Accessories.razor
+++ b/Persona4GoldenHelper/Client/Pages/Accessories.razor
@@ -9,7 +9,7 @@
                 <th>Name</th>
                 <th>Effect</th>
                 <th class="text-align-centre">Price</th>
-                <th>How to Obatin</th>
+                <th>How to Obtain</th>
             </tr>
         </thead>
         @if (AllAccessories != null)
