--- a/Persona4GoldenHelper/Client/Pages/Weapons.razor
+++ b/Persona4GoldenHelper/Client/Pages/Weapons.razor
@@ -16,7 +16,7 @@
                             <th class="column-very-slim text-align-centre">Accuracy</th>
                             <th>Effect</th>
                             <th class="text-align-centre">Price</th>
-                            <th>How to Obatin</th>
+                            <th>How to Obtain</th>
                         </tr>
                     </thead>
                     @foreach (var weapon in GetWeaponsByUser(character))
