Rename 'img' to 'images' and cleanup icon naming

--- a/Persona4GoldenHelper/Client/Pages/Personas.razor
+++ b/Persona4GoldenHelper/Client/Pages/Personas.razor
@@ -14,13 +14,13 @@
                 <th class="column-very-slim text-align-centre">En</th>
                 <th class="column-very-slim text-align-centre">Ag</th>
                 <th class="column-very-slim text-align-centre">Lu</th>
-                <th class="column-very-slim text-align-centre"><img src="img/Physical.png" alt="Physical" /></th>
-                <th class="column-very-slim text-align-centre"><img src="img/Fire.png" alt="Fire" /></th>
-                <th class="column-very-slim text-align-centre"><img src="img/Ice.png" alt="Ice" /></th>
-                <th class="column-very-slim text-align-centre"><img src="img/Electric.png" alt="Electric" /></th>
-                <th class="column-very-slim text-align-centre"><img src="img/Wind.png" alt="Wind" /></th>
-                <th class="column-very-slim text-align-centre"><img src="img/Light.png" alt="Light" /></th>
-                <th class="column-very-slim text-align-centre"><img src="img/Dark.png" alt="Dark" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/physical.png" alt="Physical" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/fire.png" alt="Fire" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/ice.png" alt="Ice" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/electricity.png" alt="Electric" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/wind.png" alt="Wind" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/light.png" alt="Light" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/darkness.png" alt="Dark" /></th>
             </tr>
         </thead>
         <tbody>
