Convert data to static data

--- a/Persona4GoldenHelper/Client/Pages/Accessories.razor
+++ b/Persona4GoldenHelper/Client/Pages/Accessories.razor
@@ -47,5 +47,5 @@
     ** Protected Methods
     *********/
     /// <inheritdoc/>
-    protected override async Task OnInitializedAsync() => AllAccessories = await Http.GetFromJsonAsync<List<Accessory>>("api/GetAllAccessories");
+    protected override async Task OnInitializedAsync() => AllAccessories = await Http.GetFromJsonAsync<List<Accessory>>("data/accessories.json");
 }
