--- a/Persona4GoldenHelper/Client/Pages/Books.razor
+++ b/Persona4GoldenHelper/Client/Pages/Books.razor
@@ -62,7 +62,7 @@
     /// <inheritdoc/>
     protected override async Task OnInitializedAsync()
     {
-        AllBooks = await Http.GetFromJsonAsync<List<Book>>("api/GetAllBooks");
-        BookOrder = await Http.GetFromJsonAsync<List<string>>("api/GetBookOrder");
+        AllBooks = await Http.GetFromJsonAsync<List<Book>>("data/books.json");
+        BookOrder = await Http.GetFromJsonAsync<List<string>>("data/bookorder.json");
     }
 }
